--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/BalanceFrom.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/BalanceFrom.xaml
@@ -2,106 +2,99 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Icon="/SmallHoneybee.Wpf;component/images/Safari.ico"
-        Title="结算表单" Height="600" Width="800" WindowStartupLocation="CenterScreen" Closed="BalanceFrom_OnClosed">
+        Title="结算表单" Height="380" Width="800" WindowStartupLocation="CenterScreen" Closed="BalanceFrom_OnClosed">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/Style.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"></RowDefinition>
-            <RowDefinition Height="80"></RowDefinition>
-            <RowDefinition Height="350"></RowDefinition>
-            <RowDefinition Height="60"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="180"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="780"/>
+            <ColumnDefinition Width="780*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Grid.Row="0"   FontWeight="Bold" HorizontalAlignment="Left" Margin="10,10,0,0">||结算表单</TextBlock>
+        <TextBlock Grid.Column="0" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,10,0,0">||结算表单</TextBlock>
         <Grid Grid.Column="0" Grid.Row="1" Margin="5">
             <Grid.RowDefinitions>
-                <RowDefinition Height="40"></RowDefinition>
-                <RowDefinition Height="40"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="150"/>
                 <ColumnDefinition Width="250"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Text="会员卡号/电话号码：" Height="30"  ></TextBlock>
-            <TextBox Grid.Column="1" Text="" Height="30"   Name="UserNoOrPhone" TextChanged="UserNoOrPhone_OnTextChanged"></TextBox>
-            <TextBlock Grid.Column="2" Text="{Binding Path=DataContext.BalanceDomainModel.UserBaseInfo,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Height="30"   Margin="50,0,0,0" FontWeight="Bold"></TextBlock>
-            <TextBlock Grid.Column="0" Grid.Row="1"  Text="{Binding Path=DataContext.BalanceDomainModel.UserMemberInfo,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Height="30"   Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0" FontWeight="Bold"></TextBlock>
+            <TextBlock Grid.Column="0" Text="会员卡号/电话号码：" ></TextBlock>
+            <TextBox Grid.Column="1" Text="" Name="UserNoOrPhone" TextChanged="UserNoOrPhone_OnTextChanged"></TextBox>
+            <TextBlock Grid.Column="2" Text="{Binding Path=DataContext.BalanceDomainModel.UserBaseInfo,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" FontWeight="Bold"></TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="1"  Text="{Binding Path=DataContext.BalanceDomainModel.UserMemberInfo,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" 
+                       Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Left" FontWeight="Bold"></TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="2" Margin="5">
             <Grid.RowDefinitions>
-                <RowDefinition Height="50"></RowDefinition>
-                <RowDefinition Height="30"></RowDefinition>
-                <RowDefinition Height="40"></RowDefinition>
-                <RowDefinition Height="30"></RowDefinition>
-                <RowDefinition Height="40"></RowDefinition>
-                <RowDefinition Height="40"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
+                <RowDefinition Height="35"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <RadioButton Height="30" FontSize="18" Grid.Row="1" x:Name="RadBanlanceMode" GroupName="BanlanceMode" DataContext="1" IsChecked="True"  Content="现金计算：" VerticalAlignment="Center" HorizontalAlignment="Left"></RadioButton>
-            <RadioButton Height="30" FontSize="18" Grid.Row="3"  GroupName="BanlanceMode" DataContext="2"  Content="会员卡计算："></RadioButton>
-            <Grid Grid.Column="0" Grid.Row="0" Background="#FFDCD6D0">
+            <RadioButton Grid.Row="1" x:Name="RadBanlanceMode" GroupName="BanlanceMode" DataContext="1" IsChecked="True"  Content="现金计算：" VerticalAlignment="Center" HorizontalAlignment="Left"></RadioButton>
+            <RadioButton Grid.Row="3"  GroupName="BanlanceMode" DataContext="2"  Content="会员卡计算："></RadioButton>
+            <StackPanel  Grid.Row="0" Orientation="Horizontal" >
+                <TextBlock Text="小计金额："></TextBlock>
+                <TextBlock Width="80"  Text="{Binding Path=DataContext.BalanceDomainModel.TotalPrice,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" HorizontalAlignment="Right"/>
+                <Label BorderBrush="#FF0F0F0F" Height="1" BorderThickness="2"></Label>
+                <TextBlock Text="优惠金额："></TextBlock>
+                <TextBox Width="170" Text="{Binding Path=DataContext.BalanceDomainModel.DiscountPrice,StringFormat=F2,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Name="TxtDiscount" KeyDown="TxtDiscount_OnKeyDown" ></TextBox>
+                <TextBlock Text="＝"></TextBlock>
+                <TextBlock  Text="应收金额：" HorizontalAlignment="Right"></TextBlock>
+                <TextBlock Text="{Binding Path=DataContext.BalanceDomainModel.ReceivedPrice,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" HorizontalAlignment="Right"/>
+            </StackPanel>
+            <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="120"/>
-                    <ColumnDefinition Width="30"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="120"/>
-                    <ColumnDefinition Width="30"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="小计金额：" Height="30" FontSize="20"></TextBlock>
-                <TextBlock Grid.Column="1" Height="30" Text="{Binding Path=DataContext.BalanceDomainModel.TotalPrice,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" FontSize="20" HorizontalAlignment="Right" Padding="10,0"/>
-                <TextBlock Grid.Column="2" Text="-" Height="30" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
-                <TextBlock Grid.Column="3" Text="优惠金额：" Height="30" FontSize="20"></TextBlock>
-                <TextBox Grid.Column="4"  Height="30" Text="{Binding Path=DataContext.BalanceDomainModel.DiscountPrice,StringFormat=F2,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" FontSize="20" Name="TxtDiscount" KeyDown="TxtDiscount_OnKeyDown"  HorizontalContentAlignment="Right" Background="#FFD6F3F1"></TextBox>
-                <TextBlock Grid.Column="5"  Text="＝" Height="30" FontSize="20" HorizontalAlignment="Center"></TextBlock>
-                <TextBlock Grid.Column="6"  Text="应收金额：" Height="30" FontSize="20" HorizontalAlignment="Right"></TextBlock>
-                <TextBlock Grid.Column="7" Text="{Binding Path=DataContext.BalanceDomainModel.ReceivedPrice,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"  Height="30" FontSize="24" FontWeight="Bold" HorizontalAlignment="Right"/>
-            </Grid>
-            <Grid Grid.Row="2" Margin="100,0,0,0" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="180"/>
                     <ColumnDefinition Width="250"/>
-                    <ColumnDefinition Width="170"/>
+                    <ColumnDefinition Width="5"/>
                     <ColumnDefinition Width="160"/>
                 </Grid.ColumnDefinitions>
-               <TextBlock Grid.Column="0"  Text="实收金额：" Height="30" FontSize="20"></TextBlock>
-                <TextBox Grid.Column="1" Height="30" Text="{Binding Path=DataContext.BalanceDomainModel.RealPrice,StringFormat=F2,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Name="TxtRealPrice" KeyDown="TxtRealPrice_OnKeyDown" FontSize="20"  HorizontalContentAlignment="Right" Background="#FFDBF7F5"></TextBox>
-                <TextBlock Grid.Column="2" Text="找零：" Height="30" FontSize="20" Margin="10,0" HorizontalAlignment="Right"></TextBlock>
-                <TextBlock Grid.Column="3"  Text="{Binding Path=DataContext.BalanceDomainModel.ReturnedPrice,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Height="30" FontSize="24" HorizontalAlignment="Left" Margin="0" FontWeight="Bold"/>
+               <TextBlock Grid.Column="0"  Text="实收金额：" Margin="5" HorizontalAlignment="Right"></TextBlock>
+                <TextBox Grid.Column="1" Text="{Binding Path=DataContext.BalanceDomainModel.RealPrice,StringFormat=F2,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Name="TxtRealPrice" KeyDown="TxtRealPrice_OnKeyDown" HorizontalContentAlignment="Right"></TextBox>
+                <TextBlock Grid.Column="2" Text="找零：" HorizontalAlignment="Right" Grid.ColumnSpan="2"  Width="91"></TextBlock>
+                <TextBlock Grid.Column="3"  Text="{Binding Path=DataContext.BalanceDomainModel.ReturnedPrice,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" HorizontalAlignment="Left"/>
             </Grid>
-            <Grid Grid.Row="4" Margin="100,0,0,0" >
+            <Grid Grid.Row="4"  >
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="180"/>
                     <ColumnDefinition Width="250"/>
-                    <ColumnDefinition Width="170"/>
+                    <ColumnDefinition Width="120"/>
                     <ColumnDefinition Width="160"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0"  Text="扣除金额：" Height="30" FontSize="20"></TextBlock>
-                <TextBlock Grid.Column="1" Height="30" Text="{Binding Path=DataContext.BalanceDomainModel.ReceivedPrice,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Name="TxtDeduct" FontSize="20" HorizontalAlignment="Right" ></TextBlock>
-                <TextBlock Grid.Column="2" Text="剩余金额：" Height="30" FontSize="20" Margin="10,0" HorizontalAlignment="Right"></TextBlock>
-                <TextBlock Grid.Column="3"  Text="{Binding Path=DataContext.BalanceDomainModel.SurplusPrice,Mode=OneWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"  Height="30" FontSize="24" HorizontalAlignment="Left" Margin="0" FontWeight="Bold"/>
+                <TextBlock Grid.Column="0"  Text="扣除金额：" HorizontalAlignment="Right"></TextBlock>
+                <TextBlock Grid.Column="1"  Text="{Binding Path=DataContext.BalanceDomainModel.ReceivedPrice,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Name="TxtDeduct" HorizontalAlignment="Right" ></TextBlock>
+                <TextBlock Grid.Column="2" Text="剩余金额：" HorizontalAlignment="Right"></TextBlock>
+                <TextBlock Grid.Column="3"  Text="{Binding Path=DataContext.BalanceDomainModel.SurplusPrice,Mode=OneWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" HorizontalAlignment="Left" Margin="0"/>
             </Grid>
-            <Grid Grid.Column="0" Grid.Row="5" Background="#FFD8C7C7">
+            <Grid Grid.Column="0" Grid.Row="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="{Binding Path=DataContext.BalanceDomainModel.MemberInfo,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Height="30" FontSize="20"></TextBlock>
+                <TextBlock Grid.Column="0" Text="{Binding Path=DataContext.BalanceDomainModel.MemberInfo,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"></TextBlock>
                 </Grid>
         </Grid>
-        <Grid Grid.Column="0" Grid.Row="3" Margin="5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="200"/>
-                <ColumnDefinition Width="120"/>
-            </Grid.ColumnDefinitions>
-            <Button Grid.Column="1"    FontWeight="Bold" Content="结算" Height="50"  Margin="0,0,10,0" Name="ButSure" Click="ButSure_OnClick" RenderTransformOrigin="1.525,0.584"/>
-            <Button Grid.Column="2"   FontWeight="Bold" Content="返回" Height="50" Name="ButCancel" Click="ButCancel_OnClick"></Button>
-        </Grid>
+        <StackPanel  Grid.Column="0" Grid.Row="3" Margin="5" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button  FontWeight="Bold" Content="结算" Width="120" Name="ButSure" Click="ButSure_OnClick"/>
+            <Button FontWeight="Bold" Content="返回" Name="ButCancel" Click="ButCancel_OnClick"></Button>
+        </StackPanel>
     </Grid>
 </Window>
