--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/Produce.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/Produce.xaml
@@ -6,7 +6,15 @@
       xmlns:props="clr-namespace:SmallHoneybee.Wpf.Properties"
       mc:Ignorable="d" 
 	Title="{x:Static props:Resources.Produce}">
-
+    <Page.Resources>
+        <RoutedUICommand x:Key="ClearSearchText" Text="Increase Font Size" />
+        <RoutedUICommand x:Key="ExecuteSearchText" Text="Decrease Font Size" />
+        <ResourceDictionary x:Key="CommonStyle">
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/Style.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"></RowDefinition>
@@ -34,14 +42,14 @@
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
             <TextBlock Grid.Column="0" Grid.Row="0" Text="条形码/编号/名称：" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"></TextBlock>
-            <TextBox Background="#FFE7F5F5" Grid.Column="1" Grid.Row="0" Width="380" Height="30" FontSize="16" Name="TxtSearchBox"></TextBox>
-            <Button  Grid.Column="2" Grid.Row="0" Width="100" Height="30" Content="{x:Static props:Resources.Search}"  FontSize="16" Click="BtnSearch_Click"/>
-            <Button  Grid.Column="3" Grid.Row="0" Width="100" Height="30" Content="清空"  FontSize="16" Click="BtnClear_Click" />
-            <Button  Grid.Column="4" Grid.Row="0" Width="100" Height="30" Content="保存"  FontSize="16" Click="BtnSave_Click" HorizontalAlignment="Left" VerticalAlignment="Center"></Button>
-            <Button  Grid.Column="5" Grid.Row="0" Width="100" Height="30" Content="{x:Static props:Resources.Import}"  FontSize="16" Click="BtnImport_Click" HorizontalAlignment="Left" VerticalAlignment="Center"></Button>
+            <TextBox Background="#FFE7F5F5" Grid.Column="1" Grid.Row="0" Name="TxtSearchBox"></TextBox>
+            <Button  Grid.Column="2" Grid.Row="0" Content="{x:Static props:Resources.Search}" Click="BtnSearch_Click"/>
+            <Button  Grid.Column="3" Grid.Row="0" Content="清空" Click="BtnClear_Click" />
+            <Button  Grid.Column="4" Grid.Row="0" Content="保存" Click="BtnSave_Click" ></Button>
+            <Button  Grid.Column="5" Grid.Row="0" Content="{x:Static props:Resources.Import}" Click="BtnImport_Click"></Button>
         </Grid>
         <GridSplitter HorizontalAlignment="Stretch" Grid.Row="2" Background="#FF1D1F1C" />
-        <DataGrid Grid.Row="3" Name="gridProduces" AutoGenerateColumns="False" ItemsSource="{Binding Path=DataContext.Produces,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" IsReadOnly="True" FontSize="16" FontWeight="Medium">
+        <DataGrid Grid.Row="3" Name="gridProduces" AutoGenerateColumns="False" ItemsSource="{Binding Path=DataContext.Produces,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" IsReadOnly="True" FontWeight="Medium">
             <DataGrid.Columns>
                 <!--<DataGridTemplateColumn Header="产品系列" Width="150">
                     <DataGridTemplateColumn.CellTemplate>
@@ -152,10 +160,6 @@
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
-    <Page.Resources>
-        <RoutedUICommand x:Key="ClearSearchText" Text="Clear Search Text" />
-        <RoutedUICommand x:Key="ExecuteSearchText" Text="Execute Search Text" />
-    </Page.Resources>
     <Page.InputBindings>
         <KeyBinding Gesture="Esc" Command="{StaticResource ClearSearchText}"/>
         <KeyBinding Gesture="Enter" Command="{StaticResource ExecuteSearchText}"/>
