--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/User.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/User.xaml
@@ -15,7 +15,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
-    <Grid>
+    <Grid Resources="{StaticResource CommonStyle}">
         <Grid.RowDefinitions>
             <RowDefinition Height="25"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
@@ -26,22 +26,22 @@
             <ColumnDefinition Width="1000*"/>
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="0" Grid.Row="0" FontSize="16" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,0,0,0">||会员管理</TextBlock>
-        <Grid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left">
+        <Grid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Margin="5">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"></ColumnDefinition>
-                <ColumnDefinition Width="400"></ColumnDefinition>
-                <ColumnDefinition Width="120"></ColumnDefinition>
-                <ColumnDefinition Width="120"></ColumnDefinition>
-                <ColumnDefinition Width="120*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="300"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="50"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" Text="会员编号/电话号码：" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"></TextBlock>
-            <TextBox Background="#FFE7F5F5" Grid.Column="1" Grid.Row="0" Name="TxtSearchBox"></TextBox>
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="会员编号/电话号码：" HorizontalAlignment="Right" VerticalAlignment="Center" ></TextBlock>
+            <TextBox Grid.Column="1" Grid.Row="0" Name="TxtSearchBox"></TextBox>
             <Button  Grid.Column="2" Grid.Row="0" Content="{x:Static props:Resources.Search}" Click="BtnSearch_Click"/>
             <Button  Grid.Column="3" Grid.Row="0" Content="清空" Click="BtnClear_Click" />
             <Button  Grid.Column="4" Grid.Row="0" Content="保存" Click="BtnSave_Click" />
