--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/SaleOrder.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/SaleOrder.xaml
@@ -1,4 +1,6 @@
 ﻿<Page x:Class="SmallHoneybee.Wpf.Views.SaleOrder"
+      xmlns:sys="clr-namespace:System;assembly=mscorlib"  
+      xmlns:local="clr-namespace:ConverterAndValidation"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,13 +17,15 @@
                 <ResourceDictionary Source="/Resources/Style.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
+        <local:StatusConverter x:Key="StatusConverter"></local:StatusConverter>
     </Page.Resources>
     <av:Grid Resources="{StaticResource CommonStyle}">
         <Grid.RowDefinitions>
             <RowDefinition Height="25"></RowDefinition>
-            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="85"></RowDefinition>
             <RowDefinition Height="5"></RowDefinition>
             <RowDefinition Height="350"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -31,22 +35,26 @@
         <Grid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Margin="5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="300"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
+                <RowDefinition Height="40"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" Text="单据编号：" HorizontalAlignment="Right" VerticalAlignment="Center" ></TextBlock>
-            <TextBox Grid.Column="1" Grid.Row="0" Name="TxtSearchBox"></TextBox>
-            <Button  Grid.Column="2" Grid.Row="0" Content="{x:Static props:Resources.Search}" Click="BtnSearch_Click"/>
-            <Button  Grid.Column="3" Grid.Row="0" Content="清空" Click="BtnClear_Click" />
-            <Button  Grid.Column="4" Grid.Row="0" Content="新建" Click="Button_Click"></Button>
+            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center">
+                <TextBlock Text="单据编号：" VerticalAlignment="Center"/>
+                <TextBox Name="TxtSearchBox" Width="300" ></TextBox>
+                <TextBlock Text="时间范围：" VerticalAlignment="Center"></TextBlock>
+                <DatePicker Name="DateStartDate" Width="160" Language="zh-CN"  SelectedDateFormat="Long"></DatePicker>
+                <TextBlock VerticalAlignment="Center">～</TextBlock>
+                <DatePicker Name="DateEndDate" Width="160" Language="zh-CN"  SelectedDateFormat="Long" SelectedDate="{x:Static sys:DateTime.Today}"></DatePicker>
+            </StackPanel>
+            <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
+                <Button Content="{x:Static props:Resources.Search}" Click="BtnSearch_Click"/>
+                <Button Content="清空" Click="BtnClear_Click" />
+                <Button Content="新建" Click="Button_Click"></Button>
+            </StackPanel>
         </Grid>
         <GridSplitter HorizontalAlignment="Stretch" Grid.Row="2" Background="#FF1D1F1C" />
         <DataGrid Grid.Row="3" Name="GridSaleOrders" AutoGenerateColumns="False" 
@@ -77,33 +85,11 @@
                 </DataGridTemplateColumn>
                 <DataGridTextColumn Header="PurchaseOrderId" Binding="{Binding PurchaseOrderId}" Visibility="Hidden"/>
                 <DataGridTextColumn Header="单据编号" Binding="{Binding SaleOrderNo}"/>
-                <!--<DataGridTextColumn Header="名称" Binding="{Binding Name}"/>-->
                 <DataGridTextColumn Header="购买日期" Binding="{Binding DateOriginated, StringFormat='yyyy-MM-dd HH:mm:ss'}"/>
-                <!--<DataGridTemplateColumn Header="状态">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <ComboBox 
-                                SelectedValue="{Binding SaleOrderStatus}" 
-                                SelectedValuePath="Key" 
-                                DisplayMemberPath="Value" 
-                                ItemsSource="{Binding Path=DataContext.SaleOrderStatusTexts,
-                                    RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" 
-                                IsReadOnly="True"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>-->
                 <DataGridComboBoxColumn Header="状态">
-                    <!--<DataGridComboBoxColumn.EditingElementStyle>
-                        <Style TargetType="ComboBox">
-                            <Setter Property="ItemsSource" Value="{Binding Path=DataContext.SaleOrderStatusTexts,
-                                    RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" />
-                            <Setter Property="DisplayMemberPath" Value="Value" />
-                            <Setter Property="SelectedValuePath" Value="Key" />
-                            <Setter Property="SelectedValue" Value="{Binding SaleOrderStatus,UpdateSourceTrigger=PropertyChanged}" />
-                        </Style>
-                    </DataGridComboBoxColumn.EditingElementStyle>-->
                     <DataGridComboBoxColumn.ElementStyle>
                         <Style TargetType="ComboBox">
+                            <Setter Property="Foreground" Value="{Binding SaleOrderStatus,Converter={StaticResource StatusConverter}}"></Setter>
                             <Setter Property="ItemsSource" Value="{Binding Path=DataContext.SaleOrderStatusTexts,
                                     RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" />
                             <Setter Property="DisplayMemberPath" Value="Value" />
@@ -113,32 +99,34 @@
                     </DataGridComboBoxColumn.ElementStyle>
                 </DataGridComboBoxColumn>
                 <DataGridTextColumn Header="商品金额" Binding="{Binding ProduceCost, StringFormat=F2}">
-                    <DataGridTextColumn.CellStyle>
-                        <Style>
-                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Right"/>
                         </Style>
-                    </DataGridTextColumn.CellStyle>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="(-)合计打折金额" Binding="{Binding FavorableCost, StringFormat=F2}">
-                    <DataGridTextColumn.CellStyle>
-                        <Style>
-                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Right"/>
                         </Style>
-                    </DataGridTextColumn.CellStyle>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="(+)其他费用" Binding="{Binding OtherCost, StringFormat=F2}">
-                    <DataGridTextColumn.CellStyle>
-                        <Style>
-                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Right"/>
                         </Style>
-                    </DataGridTextColumn.CellStyle>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="(=)合计金额" Binding="{Binding TotalCost, StringFormat=F2}" FontWeight="Bold">
-                    <DataGridTextColumn.CellStyle>
-                        <Style>
-                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
+                <DataGridTextColumn Header="(=)合计金额" Binding="{Binding TotalCost, StringFormat=F2}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="FontWeight" Value="Bold"></Setter>
+                            <Setter Property="Foreground" Value="{Binding SaleOrderStatus,Converter={StaticResource StatusConverter}}"></Setter>
+                            <Setter Property="HorizontalAlignment" Value="Right"/>
                         </Style>
-                    </DataGridTextColumn.CellStyle>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="购买人" Binding="{Binding User.Name}"/>
 
@@ -146,52 +134,53 @@
 
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid Grid.Row="4" Name="GridSOProduces" AutoGenerateColumns="False" ItemsSource="{Binding Path=DataContext.SOProduceDomainModels,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" IsReadOnly="True"  FontWeight="Medium">
+        <TextBlock  Grid.Column="0" Grid.Row="4" Name="TxtTotalInfo" FontWeight="Bold" Foreground="#FFEC1042" HorizontalAlignment="Right"/>
+        <DataGrid Grid.Row="5" Name="GridSOProduces" AutoGenerateColumns="False" ItemsSource="{Binding Path=DataContext.SOProduceDomainModels,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" IsReadOnly="True"  FontWeight="Medium">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="产品条形码" Binding="{Binding SOProduce.Produce.BarCode}"/>
                 <DataGridTextColumn Header="产品编号" Binding="{Binding SOProduce.Produce.ProduceNo}"/>
                 <DataGridTextColumn Header="产品名称" Binding="{Binding SOProduce.Produce.Name}"/>
                 <DataGridTextColumn Header="购买数额" Binding="{Binding SOProduce.Quantity, StringFormat=F2}">
-                    <DataGridTextColumn.CellStyle>
-                        <Style>
-                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Right"/>
                         </Style>
-                    </DataGridTextColumn.CellStyle>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="零售单价" Binding="{Binding SOProduce.Produce.RetailPrice, StringFormat=F2}">
-                    <DataGridTextColumn.CellStyle>
-                        <Style>
-                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Right"/>
                         </Style>
-                    </DataGridTextColumn.CellStyle>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="优惠折扣" Binding="{Binding SOProduce.DiscountRate, StringFormat=F2}">
-                    <DataGridTextColumn.CellStyle>
-                        <Style>
-                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Right"/>
                         </Style>
-                    </DataGridTextColumn.CellStyle>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="实际单价" Binding="{Binding SOProduce.CostPerUnit, StringFormat=F2}">
-                    <DataGridTextColumn.CellStyle>
-                        <Style>
-                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Right"/>
                         </Style>
-                    </DataGridTextColumn.CellStyle>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="小计金额" Binding="{Binding SOProduceTotal, StringFormat=F2}" FontWeight="Bold">
-                    <DataGridTextColumn.CellStyle>
-                        <Style>
-                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Right"/>
                         </Style>
-                    </DataGridTextColumn.CellStyle>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="剩余库存" Binding="{Binding SOProduce.Produce.Quantity, StringFormat=F2}">
-                    <DataGridTextColumn.CellStyle>
-                        <Style>
-                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Right"/>
                         </Style>
-                    </DataGridTextColumn.CellStyle>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="备注" Binding="{Binding SOProduce.Description}"/>
             </DataGrid.Columns>
